@@ -10,15 +10,15 @@ import com.sdi.app.repository.LibraryBookRepository;
 import jakarta.persistence.EntityNotFoundException;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -43,11 +43,13 @@ public class BookService {
         this.modelMapper = modelMapper;
     }
 
-    public List<BookWithAuthorIDDTO> getAllBooks() {
-        List<Book> books = bookRepository.findAll();
-        return books.stream()
-                .map(book -> modelMapper.map(book, BookWithAuthorIDDTO.class))
-                .collect(Collectors.toList());
+    public Page<BookWithAuthorIDDTO> getAllBooks(int pageNumber, int pageSize) {
+        PageRequest pageRequest = PageRequest.of(pageNumber, pageSize);
+        Page<Book> books = bookRepository.findAll(pageRequest);
+        List<BookWithAuthorIDDTO> bookDTOs = new ArrayList<>(books.stream()
+                .map(book -> modelMapper.map(book, BookWithAuthorIDDTO.class)).toList());
+        Collections.shuffle(bookDTOs);
+        return new PageImpl<>(bookDTOs, pageRequest, books.getTotalElements());
     }
 
     public BookDTO getBookById(Long id) {
